[package]
name          = "gpu"
version       = "0.1.4"
authors       = ["Danilo Guanabara <danguafer@gmail.com>"]
edition       = "2018"
license       = "Apache-2.0"
description   = "An ergonomic GPU API"
documentation = "https://docs.rs/gpu/0.1.0/gpu/"
readme        = "README.md"
repository    = "https://github.com/danguafer/gpu"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow         = "0.4.0"
shrinkwraprs = "0.3.0"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys      = { version = "0.3", package = "web-sys", features=["console","Document",
"Node", "Element", "HtmlElement"] }
wasm-bindgen = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"